sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:22: error: value ttri? is not a member of Unit
possible cause: maybe a semicolon is missing before `value ttri?'?
     }  ttri?=ttri?+1
        ^